# hcp

./: .gitignore  README.md  __init__.py  hcp_server.py  pyproject.toml  server.py  shelf_tool_start_mcp.py  shelf_tool_stop_mcp.py
scratch/: create_camera.py  create_effect.py  create_scene.py  test_connection.py
tests/: headless_host.py  test_tools.py
