[project]
name = "hcp"
version = "0.1.0"
description = "MCP server enabling Ai to control SideFX Houdini via natural language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.4.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-classic>=1.0.0",
    "ollama>=0.2.1",
]
